Bug overflow navbar

--- a/css/style.css
+++ b/css/style.css
@@ -269,16 +269,15 @@ footer {
 
 	.nav-contain {
 		top: 50px;
-		left: 100vw;
+		left: 0;
 		position: absolute;
 		width: 100vw;
-		opacity: 0%;
-		transition: all 0.5s ease;
+		transform: translateX(100%); /* Navbar dipindahkan ke kanan layar */
+		transition: transform 0.5s ease;
 	}
 
 	.nav-contain.nav-open {
-		left: 0vw;
-		opacity: 100%;
+		transform: translateX(0); /* Navbar kembali ke posisi awal */
 	}
 
 	#nav_list {
